@@ -34,6 +34,23 @@ def getInfo(info):
 This is free software, and you are welcome to redistribute it
 under the terms of the GNU General Public License; see the accompanied file COPYING for details.""")
 
+    d = {
+    'bugtracker_url' : 'http://sourceforge.net/tracker/?func=add&group_id=219925&atid=1048159',
+    'feature_url'    : 'http://sourceforge.net/tracker/?func=add&group_id=219925&atid=1048162',
+    'patch_url'      : 'http://sourceforge.net/tracker/?func=add&group_id=219925&atid=1048161'}
+    info.feedback=_("""<p><b>Feedback about this program is welcome and encouraged!</b></p>
+<p>
+Please report any bugs to the bug tracker at <a href="%(bugtracker_url)s">%(bugtracker_url)s</a>
+</p>
+<p>
+Requests for new features may be entered at <a href="%(feature_url)s">%(feature_url)s</a>
+</p>
+<p>
+Patches are welcome at <a href="%(patch_url)s">%(patch_url)s</a>
+</p>
+""")
+    info.feedback = info.feedback % d
+
     return info
 
 
